--- a/style.css
+++ b/style.css
@@ -1,11 +1,27 @@
-body{
+body {
     background-color: lightskyblue;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
-h1{
-    color: brown;
+h1 {
+    color: black;
     font-size: 50px;
     margin-top: 50px;
+}
+
+img {
+    width: 300px;
+    border-radius: 15px;
+}
+
+button {
+    background-color: white;
+    color: black;
+    font-size: 20px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
 }
